--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <img src="jovian-logo.png" alt="jovian logo" height="40px">
     <img id="first-image" src="banner.avif" alt="banner">
-    <h1>About Jovian</h1>
+    <h1>Welcome to Jovian</h1>
     <div id="div">
         <div class="one">
 
